--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <app></app>
+
+    <script src="http://cdn.auth0.com/js/lock-8.2.min.js"></script>
+
     <script src="dist/bundle.js"></script>
   </body>
 </html>
