--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Vue Webpack Example</title>
-    <link rel="stylesheet" href="dist/bundle.css">
+    <title>Vue Webpack Example</title
+
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./bundle.css">
   </head>
   <body>
     <app></app>
 
     <script src="http://cdn.auth0.com/js/lock-8.2.min.js"></script>
 
-    <script src="dist/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
